# atlas-plemen-fci

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  breeds.json  generate_anki.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  deploy.yml
anki/: generate_anki.py
data/: breeds.json  cs_overrides.csv  fci_match_overrides.csv
reports/: open_questions.md
schemas/: breeds.schema.json
src/: apply_cs_overrides.py  build_db.py  enrich_cmku.py  enrich_fci.py  make_icons.py  photo_fetcher.py  verify_cs_names.py
tests/: conftest.py  test_apply_cs_overrides.py  test_build_db.py  test_enrich_cmku.py  test_enrich_fci.py  test_generate_anki.py  test_make_icons.py  test_photo_fetcher.py  test_verify_cs_names.py
tests/fixtures/: sample_breeds.json
web/: index.html  manifest.webmanifest  sw.js  template.html
