[project]
name = "atlas-plemen"
version = "2.0.0"
description = "Atlas plemen FCI: data pipeline, quiz, and Anki deck for Czech cynology exam prep"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Barbora Šandová" }]
dependencies = [
    "genanki>=0.13",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "jsonschema>=4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# E/W pycodestyle, F pyflakes, I isort, UP pyupgrade, B bugbear, SIM simplify
select = ["E", "W", "F", "I", "UP", "B", "SIM"]
ignore = [
    "E501",  # line length handled by formatter, not enforced hard
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[tool.coverage.run]
source = ["src", "anki"]
omit = ["tests/*"]
